mid part alignment has fixed

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -48,7 +48,7 @@ header {
             height: 40px;
             ul {
                 height: 40px;
-                
+                margin-left: 4px;
                 li {
                     height: 40px;
                     padding-top: 10px;
@@ -100,7 +100,8 @@ header {
             // padding-top: 10px;
             padding-top: 18px;
             ul {
-                margin-left: -6px;
+                // margin-left: -6px;
+                margin-left: 7px;
                 height: 30px;
                 li {
                     height: 30px;
