--- a/src/app/components/header/search-bar/search-bar.scss
+++ b/src/app/components/header/search-bar/search-bar.scss
@@ -1,7 +1,7 @@
 .search-bar{
     //margin-top: 0px;
     margin-top: 1px;
-
+    margin-left: 4px;
     .form-group .dropdown-menu{
         border-radius: 0px;
         li.active{
